Header z-index Fixed

--- a/main.css
+++ b/main.css
@@ -130,7 +130,7 @@ input {
     background-color: green;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 4;
     display: flex;
     padding-left: 100px;
 }
